fix: flex の親要素に gap を設定して余白を作るように修正

--- a/src/app/normal-header/components/header/navigation/styles.module.css
+++ b/src/app/normal-header/components/header/navigation/styles.module.css
@@ -3,7 +3,6 @@
   font-size: 0.875rem;
   font-weight: bold;
   padding: 0 2rem;
-  margin-top: 0.5rem;
   width: 100%;
   height: 2.5rem;
 }
@@ -14,7 +13,6 @@
   align-items: center;
   color: rgb(0 0 0 / 60%);
   padding: 0.25rem 0.75rem;
-  margin: 0.25rem 0;
   text-decoration: none;
 }
 
