--- a/src/app/normal-header/components/header/styles.module.css
+++ b/src/app/normal-header/components/header/styles.module.css
@@ -1,5 +1,5 @@
 .root {
   padding: 0.025rem 2rem 0 2rem;
   background-color: #fff;
-  margin-top: 0.5rem;
+  margin: 0.5rem 0;
 }
